--- a/Nested_Comments/styles.css
+++ b/Nested_Comments/styles.css
@@ -1,4 +1,88 @@
 body{
     background-color: #2b4162;
     background-image: linear-gradient(315deg, #2b4162 0%, #12100e 74%);
+    min-height: 100vh;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.wrapper{
+    margin: 50px;
+}
+
+input, button{
+    cursor: pointer;
+    border: none;
+    padding: 0 20px;
+    height: 35px;
+    border-radius: 5px;
+    color: white;
+    background-color: #0070f3;
+    font-weight: 400;
+    box-shadow: 0 4px 14px 0 rgb(0 118 255/39%);
+}
+
+input:hover, button:hover{
+    background-color: rgba(0,118,255,0.9);
+    box-shadow: 0 6px 20px rgb(0 118 255/23%);
+}
+
+input{
+    max-width: 350px;
+    padding: 0px 10px;
+    width: 100%;
+}
+
+input::placeholder{
+    color: white;
+}
+
+.parent-input-btn{
+    display: flex;
+    gap: 6px;
+}
+
+.comment{
+    margin-left: 20px;
+}
+
+p{
+    font-size: 20px;
+    margin: 20px 0 10px 0;
+}
+
+.btn-actions{
+    display: flex;
+    gap: 10px;
+}
+
+.reply-btn{
+    background-color: rgb(81, 150, 81);
+    box-shadow: 0 6px 20px rgba(81, 150, 81,0.23);
+}
+
+.reply-btn:hover{
+    background-color: rgb(56, 116, 56);
+}
+
+.edit-btn{
+    background-color: rgb(192, 150, 14);
+    box-shadow: 0 6px 20px rgba(192, 150, 14,0.23);
+}
+.edit-btn:hover{
+    background-color:  rgb(145, 115, 18);
+}
+
+.delete-btn{
+    background-color: rgb(179, 74, 74);
+    box-shadow: 0 6px 20px rgba(179, 74, 74,0.23);
+}
+.delete-btn:hover{
+    background-color:  rgb(131, 57, 57);
+}
+
+.replyContainer{
+    display: flex;
+    gap:6px;
+    margin-top: 10px;
 }
